[gd_scene load_steps=5 format=3 uid="uid://cvbkrxg3m67r3"]

[ext_resource type="Script" uid="uid://h1k4gdw74gnu" path="res://modules/bee/bee.gd" id="1_v5qog"]
[ext_resource type="Script" uid="uid://cxhvrc78bb02w" path="res://components/movement_component.gd" id="2_gf08q"]
[ext_resource type="PackedScene" uid="uid://cy5u0o2nf2ugw" path="res://modules/bee/bee.blend" id="2_h388o"]
[ext_resource type="Script" uid="uid://g60kdvfcuy3k" path="res://components/roll_component.gd" id="3_lrr5f"]

[node name="BeeNode3D" type="Node3D"]
script = ExtResource("1_v5qog")

[node name="MovementComponent" type="Node" parent="."]
script = ExtResource("2_gf08q")

[node name="RollComponent" type="Node" parent="."]
script = ExtResource("3_lrr5f")
metadata/_custom_type_script = "uid://g60kdvfcuy3k"

[node name="BeeBlend" parent="." instance=ExtResource("2_h388o")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="LifetimeLabel3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.353553, 0, -0.353553, 0, 0.5, 0, 0.353553, 0, -0.353553, 0, 3.65, 0)
pixel_size = 0.025
text = "0.00s"

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(-0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, -0.707107, 0, 3, 0)
pixel_size = 0.025
text = "Bee"

[node name="CarryLabel3D" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.353553, 0, -0.353553, 0, 0.5, 0, 0.353553, 0, -0.353553, 0, 2.35, 0)
pixel_size = 0.025
text = "0/0"
